...
      child: Padding(
        padding: const EdgeInsets.only(bottom: 8),
        child: ListView(
          children: const [
            kSmallGap,
            FAQEntry(
              question: 'Do czego służy Wściekły Czerwony Smok?',
              answer:
                  'Aplikacja  służy do  przeprowadzania inwentaryzacji przedmiotów w salach w budynkach na terenie SGGW.',
            ),
            kSmallGap,
            FAQEntry(
                question: 'Czy istnieje wizualny podgląd do budynków i sal?',
                answer:
                    'Aby uzyskać wizualny podgląd do planów budynków i rozmieszczeń sal: Pobierz aplikację Kampus'),
            kSmallGap,
            FAQEntry(
              question: 'Kto może dodawać i usuwać użytkowników?',
              answer:
...
